<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quiz"
    tools:context=".feature.ui.activity.main.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/txvWelcomeQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome To Quiz"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Your Name"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:textStyle="normal"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txvWelcomeQuiz"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txvFullName"
                app:boxBackgroundMode="none">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edt_corner_radius"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColor="@color/colorTextNormal"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@+id/tilName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vwpQuestions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:visibility="gone"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvTimer"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:drawablePadding="12dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_clock" />

    <ImageButton
        android:id="@+id/imvBackQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:layout_marginTop="22dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back_arrow_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/crdCompleted"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imvTrophy"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_achievement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Well played Ivan"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imvTrophy" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            app:cardElevation="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="23dp"
            app:cardBackgroundColor="@color/questionBackgroundCardColor"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txvName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txvQuestionNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_star" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rllProgressBar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txvQuestionNumber">

                    <com.android.quizapp.utils.CircularProgressView
                        android:id="@+id/prbSuccess"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:indeterminate="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txvProPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txvTotalPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textStyle="bold"
                    android:text="@string/totalPoints"
                    android:textColor="@color/txvColorQuestion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rllProgressBar" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnTakeAnotherShot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/takeAnotherShot"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/sflQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dividerColor"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingTop="20dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txvNameShimmer"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/corner_radius_shimmer"
                    android:text="Full name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@id/cltTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvNameShimmer"
                    android:layout_marginTop="84dp"
                    android:background="@drawable/corner_radius_shimmer"
                    android:backgroundTint="@color/white">

                    <TextView
                        android:id="@+id/txvContactNumberShimmer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:background="@drawable/corner_radius_shimmer"
                        android:textColor="@color/colorTextNormal"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txvAnswerOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cltTop"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/corner_radius_shimmer"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txvAnswerTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvAnswerOne"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/corner_radius_shimmer"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txvAnswerThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvAnswerTwo"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/corner_radius_shimmer"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txvAnswerFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvAnswerThree"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/corner_radius_shimmer"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="18sp" />

            </RelativeLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cltNoData"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_data" />

        <TextView
            android:id="@+id/textViewNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/imvNoData"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/noDataAvailable"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>